{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 19,
  "lineage": "f777c47a-21e2-1380-8426-48c5f6e06128",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkInterfaces/labVM1-nic",
            "internal_dns_name_label": "labVM1",
            "internal_fqdn": "labVM1.jxbzonzwabwetpekk2225nkagg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet/subnets/subnet010"
              }
            ],
            "location": "westeurope",
            "name": "labVM1-nic",
            "private_ip_address": "10.140.1.4",
            "private_ip_addresses": [
              "10.140.1.4"
            ],
            "resource_group_name": "slawekrg022"
          },
          "depends_on": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.hub1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkInterfaces/labVM2-nic",
            "internal_dns_name_label": "labVM2",
            "internal_fqdn": "labVM2.sffjsude2a5epn2d5h5jawjqmg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_spoke_vnet/subnets/subnet001"
              }
            ],
            "location": "westeurope",
            "name": "labVM2-nic",
            "private_ip_address": "10.130.1.4",
            "private_ip_addresses": [
              "10.130.1.4"
            ],
            "resource_group_name": "slawekrg022"
          },
          "depends_on": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.spoke1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG_Hub",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkSecurityGroups/hub_NSG_RDP_allow",
            "location": "westeurope",
            "name": "hub_NSG_RDP_allow",
            "resource_group_name": "slawekrg022",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG_Spoke",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkSecurityGroups/spoke_NSG_RDP_allow",
            "location": "westeurope",
            "name": "spoke_NSG_RDP_allow",
            "resource_group_name": "slawekrg022",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSGle_Hub",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkSecurityGroups/hub_NSG_RDP_allow/securityRules/ITA_P_POS_AllowRDP",
            "name": "ITA_P_POS_AllowRDP",
            "network_security_group_name": "hub_NSG_RDP_allow",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "slawekrg022",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "3389",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.NSG_Hub",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSGle_Spoke",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkSecurityGroups/spoke_NSG_RDP_allow/securityRules/ITA_P_POS_AllowRDP",
            "name": "ITA_P_POS_AllowRDP",
            "network_security_group_name": "spoke_NSG_RDP_allow",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "slawekrg022",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "3389",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.NSG_Spoke",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gatewaySubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.140.2.0/24",
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "slawekrg022",
            "virtual_network_name": "slawek_hub_vnet"
          },
          "depends_on": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.Vnet_Hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub1_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.140.1.0/24",
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet/subnets/subnet010",
            "name": "subnet010",
            "resource_group_name": "slawekrg022",
            "virtual_network_name": "slawek_hub_vnet"
          },
          "depends_on": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.Vnet_Hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.130.1.0/24",
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_spoke_vnet/subnets/subnet001",
            "name": "subnet001",
            "resource_group_name": "slawekrg022",
            "virtual_network_name": "slawek_spoke_vnet"
          },
          "depends_on": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.Vnet_Spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NsgAssociationHub1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet/subnets/subnet010",
            "network_security_group_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkSecurityGroups/hub_NSG_RDP_allow",
            "subnet_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet/subnets/subnet010"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG_Hub",
            "azurerm_subnet.hub1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NsgAssociationSpoke1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_spoke_vnet/subnets/subnet001",
            "network_security_group_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/networkSecurityGroups/spoke_NSG_RDP_allow",
            "subnet_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_spoke_vnet/subnets/subnet001"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG_Spoke",
            "azurerm_subnet.spoke1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet_Hub",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.140.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8"
            ],
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet",
            "location": "westeurope",
            "name": "slawek_hub_vnet",
            "resource_group_name": "slawekrg022"
          },
          "depends_on": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet_Spoke",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.130.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8"
            ],
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_spoke_vnet",
            "location": "westeurope",
            "name": "slawek_spoke_vnet",
            "resource_group_name": "slawekrg022"
          },
          "depends_on": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peerHubtoSpoke",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet/virtualNetworkPeerings/Hub_to_Spoke_peer",
            "name": "Hub_to_Spoke_peer",
            "remote_virtual_network_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_spoke_vnet",
            "resource_group_name": "slawekrg022",
            "use_remote_gateways": false,
            "virtual_network_name": "slawek_hub_vnet"
          },
          "depends_on": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.Vnet_Hub",
            "azurerm_virtual_network.Vnet_Spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peerSpokeToHub",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_spoke_vnet/virtualNetworkPeerings/Spoke_to_HUB_peer",
            "name": "Spoke_to_HUB_peer",
            "remote_virtual_network_id": "/subscriptions/0d87dc7a-1e79-4d24-aeaf-2b3d39e68787/resourceGroups/slawekrg022/providers/Microsoft.Network/virtualNetworks/slawek_hub_vnet",
            "resource_group_name": "slawekrg022",
            "use_remote_gateways": false,
            "virtual_network_name": "slawek_spoke_vnet"
          },
          "depends_on": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.Vnet_Hub",
            "azurerm_virtual_network.Vnet_Spoke"
          ]
        }
      ]
    }
  ]
}